@@ -4,14 +4,14 @@ message("*** DEPRECATED & DEFUNCT ...")
 
 message("- options")
 
-options(doFuture.globals.nullexport = TRUE)
-y <- foreach(1:2) %dopar% TRUE
-str(y)
-res <- tryCatch({
-  y <- foreach(1:2) %dopar% TRUE
-}, warning = identity)
-print(res)
-stopifnot(inherits(res, "warning"))
+### options(doFuture.globals.nullexport = TRUE)
+### y <- foreach(1:2) %dopar% TRUE
+### str(y)
+### res <- tryCatch({
+###   y <- foreach(1:2) %dopar% TRUE
+### }, error = identity)
+### print(res)
+### stopifnot(inherits(res, "error"))
 
 message("*** DEPRECATED & DEFUNCT ... DONE")
 
